# polygon-laplacian

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: README.md  amo_quad.off  bunny-hexa.off  hexaSphere.off  holy.off  mixedFaring.off  noisy-sphere.off  quad-sphere.off  sphere2.off  unit-sphere-low.off  unitsphere_low.off
data/Spheres/: noisyUVSphere.off  uvSphere.off
src/: CMakeLists.txt  GeodesicsInHeat.cpp  GeodesicsInHeat.h  MeanCurvature.cpp  MeanCurvature.h  Parameterization.cpp  Parameterization.h  PolyDiffGeo.cpp  PolyDiffGeo.h  Smoothing.cpp  Smoothing.h  SpectralProcessing.cpp  SpectralProcessing.h  SphericalHarmonics.cpp  SphericalHarmonics.h  Viewer.cpp  Viewer.h  main.cpp  run_tests.cpp
